# qt-caller

./: CMakeLists.txt  README.md  main.cpp  namelists.txt  widget.cpp  widget.h
